# tiddl-elvigilante

./: .editorconfig  .gitignore  CHANGELOG.md  COMPLETE_COMMAND_REFERENCE.md  CONFIG.md  CONTRIBUTING.md  DESIGN_CONSTRAINTS.md  FORK.md  INDICE_RAPIDO.md  LICENSE  QUICK_INDEX.md  README.md  REFERENCIA_COMPLETA_COMANDOS_PLACEHOLDERS.md  USAGE.md  __main__.py  config.example.toml  conftest.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
cli/: __init__.py  app.py  config.py  const.py  ctx.py
cli/commands/: __init__.py  auth.py  export.py  info.py
cli/commands/download/: __init__.py  downloader.py  output.py
cli/commands/subcommands/: __init__.py  fav.py  url.py
cli/utils/: download.py  resource.py
cli/utils/auth/: __init__.py  core.py  models.py
core/api/: __init__.py  api.py  client.py  exceptions.py
core/api/models/: __init__.py  base.py  resources.py  review.py
core/auth/: __init__.py  api.py  client.py  exceptions.py  models.py
core/metadata/: __init__.py  cover.py  track.py  video.py
core/utils/: __init__.py  const.py  download.py  ffmpeg.py  format.py  integrity.py  m3u.py  metrics.py  parse.py  strings.py
tests/: test_artist_separator.py  test_config.py  test_cultural_regression.py
tiddl/cli/: app.py  config.py  ctx.py
tiddl/cli/commands/: auth.py  web_login.py
tiddl/cli/commands/download/: __init__.py  downloader.py
tiddl/cli/commands/subcommands/: __init__.py  search.py
tiddl/cli/utils/auth/: models.py
tiddl/core/api/: api.py  client.py  playback.py
tiddl/core/api/models/: base.py
tiddl/core/auth/: client.py  models.py
tiddl/core/metadata/: cover.py  track.py  video.py
tiddl/core/utils/: __init__.py  ffmpeg.py  format.py  parse.py  strings.py
